--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Alfagift Mini</string>
+    <string name="logo_official_store">Logo Official Store</string>
+    <string name="lihat_semua">Lihat Semua</string>
+    <string name="official_store">Official Store</string>
 </resources>
