--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="promo">Promo</string>
     <string name="pesanan">Pesanan</string>
     <string name="akun">Akun</string>
+    <string name="send_otp_code">Send OTP code</string>
 </resources>
