--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="pesanan">Pesanan</string>
     <string name="akun">Akun</string>
     <string name="send_otp_code">Send OTP code</string>
+    <string name="_62">+62</string>
 </resources>
