banner, list layout, slider

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="akun">Akun</string>
     <string name="send_otp_code">Send OTP code</string>
     <string name="_62">+62</string>
+    <string name="banner_list_title">Promo Alfagift</string>
+    <string name="lihat_semua_promo">Lihat Semua Promo</string>
 </resources>
