otp generate success, ui working as intended, sms message send not working yet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="pesanan">Pesanan</string>
     <string name="akun">Akun</string>
     <string name="send_otp_code">Send OTP code</string>
+    <string name="send_otp_again">Send again in\u0020</string>
     <string name="_62">+62</string>
     <string name="banner_list_title">Promo Alfagift</string>
     <string name="lihat_semua_promo">Lihat Semua Promo</string>
