--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="_62">+62</string>
     <string name="banner_list_title">Promo Alfagift</string>
     <string name="lihat_semua_promo">Lihat Semua Promo</string>
+    <string name="login">Login</string>
 </resources>
