--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="login">Login</string>
     <string name="email">Email</string>
     <string name="password">password</string>
+    <string name="no_connection">NO CONNECTION</string>
 </resources>
