--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,8 @@
     <string name="email">Email</string>
     <string name="password">password</string>
     <string name="no_connection">NO CONNECTION</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last Name</string>
+    <string name="e_mail_address">E-mail address</string>
+    <string name="submit">Submit</string>
 </resources>
