banner tinggal fragment made, dan setup di activitynya

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="email">Email</string>
     <string name="password">password</string>
     <string name="no_connection">NO CONNECTION</string>
+    <string name="promo_banner_title">Promo Alfagift</string>
+    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
 </resources>
