--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="last_name">Last Name</string>
     <string name="e_mail_address">E-mail address</string>
     <string name="submit">Submit</string>
+    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
 </resources>
