starting input check validity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="e_mail_address">E-mail address</string>
     <string name="submit">Submit</string>
     <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
+    <string name="_081xxxxxxx">Eg: 081XXXXXXX</string>
 </resources>
