--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="stock_dari_gudang">Stock dari Gudang</string>
     <string name="stock_dari_toko">Stock dari Toko</string>
     <string name="stok_habis">Stok Habis</string>
-
+    <string name="kirim_ke">Kirim Ke : <b>Rumah</b></string>
     <string name="beranda">Beranda</string>
     <string name="belanja">Belanja</string>
     <string name="promo">Promo</string>
