--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,5 @@
     <string name="email_exists">Email already exists</string>
     <string name="stok_toko">Stok dari Toko</string>
     <string name="stok_gudang">Stok dari Gudang</string>
-    <string name="besar_diskon">%d\%</string>
+    <string name="besar_diskon">%d%%</string>
 </resources>
