--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,9 @@
     <string name="ikuti">Ikuti</string>
     <string name="belanja_berdasarkan_brand">Belanja berdasarkan brand</string>
     <string name="semua_produk">Semua Produk</string>
+    <string name="promo_pada_produk_ini">Promo Pada Produk Ini</string>
+    <string name="gratis_produk">Gratis Produk</string>
+    <string name="dapatkan_gratis_produk">Dapatkan Gratis Produk</string>
+    <string name="dengan_belanja_sesuai_syarat_ketentuan_yang_berlaku"><![CDATA[Dengan Belanja sesuai syarat & ketentuan yang berlaku]]></string>
+    <string name="gratis">Gratis</string>
 </resources>
