--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,5 @@
     <string name="ikuti">Ikuti</string>
     <string name="belanja_berdasarkan_brand">Belanja berdasarkan brand</string>
     <string name="semua_produk">Semua Produk</string>
+    <string name="register_account">Register Account</string>
 </resources>
