--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,7 @@
     <string name="dapatkan_gratis_produk">Dapatkan Gratis Produk</string>
     <string name="dengan_belanja_sesuai_syarat_ketentuan_yang_berlaku"><![CDATA[Dengan Belanja sesuai syarat & ketentuan yang berlaku]]></string>
     <string name="gratis">Gratis</string>
+    <string name="tutup">Tutup</string>
+    <string name="plus_pro">+%d</string>
+    <string name="rp_0">Rp 0</string>
 </resources>
