--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,7 @@
     <string name="belanja_berdasarkan_brand">Belanja berdasarkan brand</string>
     <string name="semua_produk">Semua Produk</string>
     <string name="register_account">Register Account</string>
+    <string name="hapus_riwayat">Hapus riwayat</string>
+    <string name="kategori_pilihan">Kategori Pilihan</string>
+    <string name="riwayat_pencarian">Riwayat Pencarian</string>
 </resources>
