edit tab layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="tutup">Tutup</string>
     <string name="plus_pro">+%d</string>
     <string name="rp_0">Rp 0</string>
+    <string name="arrow_down">Arrow Down</string>
+    <string name="tebus">Tebus</string>
 </resources>
