--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,36 @@
     <string name="rp_0">Rp 0</string>
     <string name="arrow_down">Arrow Down</string>
     <string name="tebus">Tebus</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+    <string name="tebus_murah">Tebus Murah</string>
+    <string name="_1">1</string>
+    <string name="judul_barang">Judul Barang</string>
+    <string name="rp_37_500">Rp.37.500</string>
+    <string name="min">Min</string>
+    <string name="plus">Plus</string>
+    <string name="imageview_product">ImageView Product</string>
+    <string name="rp_5000">Rp.5000</string>
+    <string name="rp_8000">Rp.8000</string>
+    <string name="brand_logo">Brand Logo</string>
+    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
+    <string name="dalam_proses">Dalam Proses</string>
+    <string name="dikirim">Dikirim</string>
+    <string name="selesai">Selesai</string>
+    <string name="batal">Batal</string>
+    <string name="alfagift_pesanan">Alfagift Pesanan</string>
+    <string name="yuk_belanja">Yuk, Belanja</string>
+    <string name="penawaran_terbaik">Penawaran Terbaik</string>
+    <string name="gradient_color">Gradient Color</string>
+    <string name="mau_belanja_apa">Mau belanja apa?</string>
+    <string name="produk_rekomendasi_untuk_anda">Produk rekomendasi untuk anda</string>
+    <string name="cari_produk_favorite_kamu_disini">Cari produk favorite kamu disini</string>
+    <string name="shopping_list">Shopping List</string>
+    <string name="pilih_semua_produk_10">Pilih semua produk (10)</string>
+    <string name="lihat_shopping_list">Lihat Shopping List</string>
+    <string name="direkomendasikan_untuk_anda">Direkomendasikan untuk anda</string>
+    <string name="silahkan_cek_list_produk_yang_ingin_anda_beli">Silahkan cek list produk yang ingin Anda beli</string>
+    <string name="cari_produk_di_alfagift">Cari Produk di Alfagift</string>
+    <string name="paket">Paket</string>
+    <string name="cari">Cari</string>
 </resources>
