--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="cari_produk_di_alfagift">Cari Produk di Alfagift</string>
     <string name="paket">Paket</string>
     <string name="cari">Cari</string>
+    <string name="confirm_password_hint">Confirm Password</string>
 </resources>
